# rust-todo-app

./: Cargo.toml  Dockerfile  configuration.yaml
migrations/: 20210709131047_create_tasks_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/domain/: todo.rs
src/routes/: add_task.rs  health_check.rs  mod.rs  tasks.rs
